# m_o_m

./: README.md  pyproject.toml
src/m_o_m/: app.py  main.py  streamlit_app.py
src/m_o_m/None/: meeting_transcript.txt
src/m_o_m/crews/gmail/: gmail.py
src/m_o_m/crews/gmail/tools/: gmail_tool.py
src/m_o_m/crews/mom_crew/: meeting_minutes_crew.py
src/m_o_m/crews/mom_crew/config/: agents.yaml  tasks.yaml
src/m_o_m/meeting_minutes/: action_items.txt  sentiment.txt  summary.txt
