[project]
name = "m_o_m"
version = "0.1.0"
description = "M-O-M using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
kickoff = "m_o_m.main:kickoff"
plot = "m_o_m.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
