[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
blas = "1.0"
brotli-python = "1.0.9"
bzip2 = "1.0.8"
ca-certificates = "2024.11.26"
certifi = "2024.12.14"
cuda-cccl = "12.6.77"
cuda-cccl_win-64 = "12.6.77"
cuda-cudart = "12.1.105"
cuda-cudart-dev = "12.1.105"
cuda-cupti = "12.1.105"
cuda-libraries = "12.1.0"
cuda-libraries-dev = "12.1.0"
cuda-nvrtc = "12.1.105"
cuda-nvrtc-dev = "12.1.105"
cuda-nvtx = "12.1.105"
cuda-opencl = "12.6.77"
cuda-opencl-dev = "12.6.77"
cuda-profiler-api = "12.6.77"
cuda-runtime = "12.1.0"
cuda-version = "12.6"
freetype = "2.12.1"
giflib = "5.2.2"
gmpy2 = "2.1.2"
intel-openmp = "2023.1.0"
jinja2 = "3.1.4"
lcms2 = "2.16"
lerc = "4.0.0"
libcublas = "12.1.0.26"
libcublas-dev = "12.1.0.26"
libcufft = "11.0.2.4"
libcufft-dev = "11.0.2.4"
libcurand = "10.3.7.77"
libcurand-dev = "10.3.7.77"
libcusolver = "11.4.4.55"
libcusolver-dev = "11.4.4.55"
libcusparse = "12.0.2.55"
libcusparse-dev = "12.0.2.55"
libdeflate = "1.22"
libffi = "3.4.4"
libjpeg-turbo = "2.0.0"
libnpp = "12.0.2.50"
libnpp-dev = "12.0.2.50"
libnvjitlink = "12.1.105"
libnvjitlink-dev = "12.1.105"
libnvjpeg = "12.1.1.14"
libnvjpeg-dev = "12.1.1.14"
libpng = "1.6.39"
libtiff = "4.5.1"
libuv = "1.48.0"
libwebp = "1.3.2"
libwebp-base = "1.3.2"
lz4-c = "1.9.4"
mkl = "2023.1.0"
mkl-service = "2.4.0"
mkl_fft = "1.3.11"
mkl_random = "1.2.8"
mpc = "1.1.0"
mpfr = "4.0.2"
mpir = "3.0.0"
mpmath = "1.3.0"
numpy-base = "2.0.1"
openjpeg = "2.5.2"
openssl = "3.0.15"
pillow = "11.0.0"
pysocks = "1.7.1"
pytorch = "2.5.1"
pytorch-cuda = "12.1"
pytorch-mutex = "1.0"
pyyaml = "6.0.2"
requests = "2.32.3"
setuptools = "75.1.0"
sqlite = "3.45.3"
tbb = "2021.8.0"
tk = "8.6.14"
urllib3 = "2.2.3"
vc = "14.40"
vs2015_runtime = "14.42.34433"
wheel = "0.44.0"
win_inet_pton = "1.1.0"
xz = "5.4.6"
yaml = "0.2.5"
zlib = "1.2.13"
zstd = "1.5.6"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.10"
aiosignal = "1.3.2"
alembic = "1.14.0"
altair = "5.5.0"
annotated-types = "0.7.0"
anyio = "4.7.0"
appdirs = "1.4.4"
asgiref = "3.8.1"
asttokens = "3.0.0"
attrs = "24.3.0"
audioread = "3.0.1"
auth0-python = "4.7.2"
backoff = "2.2.1"
bcrypt = "4.2.1"
beautifulsoup4 = "4.12.3"
blinker = "1.9.0"
build = "1.2.2.post1"
cachetools = "5.5.0"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
chroma-hnswlib = "0.7.6"
chromadb = "0.5.23"
click = "8.1.7"
cohere = "5.13.3"
colorama = "0.4.6"
coloredlogs = "15.0.1"
crewai = "0.86.0"
crewai-tools = "0.17.0"
cryptography = "43.0.3"
dataclasses-json = "0.6.7"
decorator = "5.1.1"
deprecated = "1.2.15"
deprecation = "2.1.0"
distro = "1.9.0"
docker = "7.1.0"
docstring-parser = "0.16"
docx2txt = "0.8"
durationpy = "0.9"
embedchain = "0.1.125"
et-xmlfile = "2.0.0"
executing = "2.1.0"
fastapi = "0.115.6"
fastavro = "1.9.7"
filelock = "3.16.1"
flatbuffers = "24.3.25"
frozenlist = "1.5.0"
fsspec = "2024.10.0"
gitdb = "4.0.12"
gitpython = "3.1.44"
google-api-core = "2.24.0"
google-api-python-client = "2.157.0"
google-auth = "2.37.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.1"
google-cloud-aiplatform = "1.75.0"
google-cloud-bigquery = "3.27.0"
google-cloud-core = "2.4.1"
google-cloud-resource-manager = "1.14.0"
google-cloud-storage = "2.19.0"
google-crc32c = "1.6.0"
google-resumable-media = "2.7.2"
googleapis-common-protos = "1.66.0"
gptcache = "0.1.44"
greenlet = "3.1.1"
grpc-google-iam-v1 = "0.13.1"
grpcio = "1.68.1"
grpcio-status = "1.68.1"
grpcio-tools = "1.68.1"
h11 = "0.14.0"
h2 = "4.1.0"
hpack = "4.0.0"
httpcore = "1.0.7"
httplib2 = "0.22.0"
httptools = "0.6.4"
httpx = "0.27.2"
httpx-sse = "0.4.0"
huggingface-hub = "0.27.0"
humanfriendly = "10.0"
hyperframe = "6.0.1"
idna = "3.10"
importlib-metadata = "8.5.0"
importlib-resources = "6.4.5"
iniconfig = "2.0.0"
instructor = "1.7.0"
ipython = "8.30.0"
jedi = "0.19.2"
jiter = "0.6.1"
joblib = "1.4.2"
json-repair = "0.31.0"
jsonpatch = "1.33"
jsonpickle = "4.0.1"
jsonpointer = "3.0.0"
jsonref = "1.1.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
kubernetes = "31.0.0"
lancedb = "0.17.0"
langchain = "0.3.12"
langchain-cohere = "0.3.3"
langchain-community = "0.3.12"
langchain-core = "0.3.25"
langchain-experimental = "0.3.3"
langchain-openai = "0.2.12"
langchain-text-splitters = "0.3.3"
langsmith = "0.1.147"
lazy-loader = "0.4"
librosa = "0.10.2.post1"
litellm = "1.55.3"
llvmlite = "0.43.0"
mako = "1.3.8"
markdown = "3.7"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
marshmallow = "3.23.1"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mem0ai = "0.1.35"
mmh3 = "5.0.1"
monotonic = "1.6"
more-itertools = "10.5.0"
msgpack = "1.1.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
narwhals = "1.20.1"
networkx = "3.4.2"
nodeenv = "1.9.1"
numba = "0.60.0"
numpy = "1.26.4"
oauthlib = "3.2.2"
onnxruntime = "1.20.1"
openai = "1.58.1"
openai-whisper = "20240930"
openpyxl = "3.1.5"
opentelemetry-api = "1.29.0"
opentelemetry-exporter-otlp-proto-common = "1.29.0"
opentelemetry-exporter-otlp-proto-grpc = "1.29.0"
opentelemetry-exporter-otlp-proto-http = "1.29.0"
opentelemetry-instrumentation = "0.50b0"
opentelemetry-instrumentation-asgi = "0.50b0"
opentelemetry-instrumentation-fastapi = "0.50b0"
opentelemetry-proto = "1.29.0"
opentelemetry-sdk = "1.29.0"
opentelemetry-semantic-conventions = "0.50b0"
opentelemetry-util-http = "0.50b0"
orjson = "3.10.12"
outcome = "1.3.0.post0"
overrides = "7.7.0"
packaging = "24.2"
pandas = "2.2.3"
parameterized = "0.9.0"
parso = "0.8.4"
pdfminer-six = "20231228"
pdfplumber = "0.11.4"
platformdirs = "4.3.6"
pluggy = "1.5.0"
pooch = "1.8.2"
portalocker = "2.10.1"
posthog = "3.7.4"
prompt-toolkit = "3.0.48"
propcache = "0.2.1"
proto-plus = "1.25.0"
protobuf = "5.29.1"
pure-eval = "0.2.3"
pyarrow = "18.1.0"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pycparser = "2.22"
pydantic = "2.10.3"
pydantic-core = "2.27.1"
pydantic-settings = "2.7.0"
pydeck = "0.9.1"
pydub = "0.25.1"
pygments = "2.18.0"
pyjwt = "2.10.1"
pylance = "0.20.0"
pyparsing = "3.2.1"
pypdf = "5.1.0"
pypdfium2 = "4.30.0"
pypika = "0.48.9"
pyproject-hooks = "1.2.0"
pyreadline3 = "3.5.4"
pyright = "1.1.391"
pysbd = "0.3.4"
pytest = "8.3.4"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytube = "15.0.0"
pytz = "2024.2"
pyvis = "0.3.2"
pywin32 = "308"
qdrant-client = "1.12.1"
referencing = "0.35.1"
regex = "2024.11.6"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.22.3"
rsa = "4.9"
schema = "0.7.7"
scikit-learn = "1.6.0"
scipy = "1.14.1"
selenium = "4.27.1"
shapely = "2.0.6"
shellingham = "1.5.4"
six = "1.17.0"
smmap = "5.0.2"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soundfile = "0.12.1"
soupsieve = "2.6"
soxr = "0.5.0.post1"
sqlalchemy = "2.0.36"
stack-data = "0.6.3"
starlette = "0.41.3"
streamlit = "1.41.1"
sympy = "1.13.1"
tabulate = "0.9.0"
tenacity = "9.0.0"
threadpoolctl = "3.5.0"
tiktoken = "0.7.0"
tokenizers = "0.20.3"
toml = "0.10.2"
tomli = "2.2.1"
tomli-w = "1.1.0"
torchaudio = "2.5.1"
torchvision = "0.20.1"
tornado = "6.4.2"
tqdm = "4.67.1"
traitlets = "5.14.3"
trio = "0.27.0"
trio-websocket = "0.11.1"
typer = "0.15.1"
types-requests = "2.32.0.20241016"
typing-extensions = "4.12.2"
typing-inspect = "0.9.0"
tzdata = "2024.2"
uritemplate = "4.1.1"
uv = "0.5.10"
uvicorn = "0.34.0"
watchdog = "6.0.0"
watchfiles = "1.0.3"
wcwidth = "0.2.13"
websocket-client = "1.8.0"
websockets = "14.1"
wrapt = "1.17.0"
wsproto = "1.2.0"
yarl = "1.18.3"
zipp = "3.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
